Stop scrollable divs from overflowing

--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,3 @@
-input[data-hook=search-query] {
-  display: none;
-}
-
-.js input[data-hook=search-query] {
-  display: block;
-}
-
-.js .js-hidden { display: none; }
-.js-shown { display: none; }
-.js .js-shown { display: block; }
-
 .datatype-thumbnail img,
 .city-thumbnail img {
   width: 64px;
